--- a/templates/sidepanel/seasons.html
+++ b/templates/sidepanel/seasons.html
@@ -4,7 +4,9 @@
     </h2>
     
       <div class='season' ng-repeat="season in seasons.seasons" style="display:inline-block; padding:10px; cursor:pointer" ui-sref="serie.season({season_id: season.ID_Season})">
-        <p lazy-background="{{season.poster}}" class="seasonposter"></p>
+        <p lazy-background="{{season.poster}}" class="seasonposter">
+        <em class="glyphicon glyphicon-eye-open" ng-if="seasons.isAllWatched(season)"></em>
+        </p>
         <p style="text-align:center">
           <strong style='color:white'>{{season.seasonnumber == 0 ? 'Specials' : 'Season '+season.seasonnumber}}</strong>
         </p>
